# krylov-labs

./: .gitignore  CMakeLists.txt
AdditionsForLabs/: script.txt
Bonus/: bonus.pro
Bonus/include/: mainwindow.h  solver.h
Bonus/src/: mainwindow.cpp  solver.cpp
Executable/: Lab2  Lab6
Executable/Linux/: Lab1  Lab3
Lab1/: CMakeLists.txt  Lab1.pro
Lab1/include/: MainWindow.h  Tab1Widget.h  Tab2Widget.h  Tab3Widget.h
Lab1/src/: MainWindow.cpp  Tab1Widget.cpp  Tab2Widget.cpp  Tab3Widget.cpp
Lab2/: CMakeLists.txt  Lab2.pro
Lab2/include/: MainWindow.h  OscB322Lib_TLB.h  Tab1Widget.h  Tab2Widget.h
Lab2/src/: MainWindow.cpp  OscB322Lib_TLB.cpp  Tab1Widget.cpp  Tab2Widget.cpp
Lab3/: CMakeLists.txt  Lab3.pro  main.cpp
Lab3/include/: Interpreter.h  MainWindow.h
Lab3/src/: Interpreter.cpp  MainWindow.cpp  main.cpp
Lab5/: CMakeLists.txt  Lab5.pro
Lab5/executable/: Lab5
Lab5/include/: MainWindow.h
Lab5/src/: MainWindow.cpp  main.cpp
Lab6/: CMakeLists.txt  Lab6.pro
Lab6/include/: MainWindow.h
Lab6/src/: MainWindow.cpp  main.cpp
Libs for connecting/: MathLibrary.cpp  MathLibrary.h
LibsForConnecting/: MathLibrary.h
LibsForConnecting/buildWin32/: MathLibrary.lib  MathLibrary.pro
QCustomPlot/: qcustomplotd2.lib
