cmake_minimum_required(VERSION 3.28.3)

project(krylov-labs CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_AUTOMOC ON)
# set(CMAKE_AUTORCC ON)
# set(CMAKE_AUTOUIC ON)

# add_subdirectory(Lab1)
add_subdirectory(Lab2)
# add_subdirectory(Lab3)
# add_subdirectory(Lab4)
# add_subdirectory(Lab5)
# add_subdirectory(Lab6)
